RESOLVED FIXED210836
[PlayStation] Fix GPU Process build for VIDEO_PRESENTATION_MODE changes
https://bugs.webkit.org/show_bug.cgi?id=210836
Summary [PlayStation] Fix GPU Process build for VIDEO_PRESENTATION_MODE changes
Stephan Szabo
Reported 2020-04-21 18:09:30 PDT
[PlayStation] Fix GPU Process build for VIDEO_PRESENTATION_MODE changes
Attachments
Patch (1.55 KB, patch)
2020-04-21 18:10 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2020-04-21 18:10:33 PDT
EWS
Comment 2 2020-04-21 19:03:17 PDT
Committed r260487: <https://trac.webkit.org/changeset/260487> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397155 [details].
Radar WebKit Bug Importer
Comment 3 2020-04-21 19:04:14 PDT
Note You need to log in before you can comment on or make changes to this bug.