[PlayStation] Fix GPU Process build for VIDEO_PRESENTATION_MODE changes https://bugs.webkit.org/show_bug.cgi?id=210836

Reviewed by Darin Adler.

Build fix, no new tests.

* GPUProcess/media/playstation/RemoteMediaPlayerProxyPlayStation.cpp:


Canonical link: https://commits.webkit.org/223723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260487 268f45cc-cd09-0410-ab3c-d52691b4dbfc